initial rm of liquid denoms
